# ot-harjoitustyo

./: .gitignore  README.md
harjoitustyo/: .coveragerc  .gitattributes  player.txt  pyproject.toml  ratinglist  tasks.py
harjoitustyo/data/: rating_database.db
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: database_connection.py  db_search.py  draw.py  draw_generator.py  drawview.py  entries.py  gui.py  h2h_view.py  home_view.py  index.py  initialize.py  match_algoritms.py  player.txt  playerinfo.py  possible_classes.txt  rating_view.py  ratinglist  search.py  web_search.py
harjoitustyo/src/tests/: Draw_test.py  Pelaaja_test.py  db_search_test.py  draw_generator_test.py  match_algoritms_test.py  search_test.py  web_search_test.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/: ot-harjoitus_nayttokuva
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md
