[project]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "OttoSFelix",email = "otto.suokas@helsinki.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.11.3,<8.0.0)",
    "pylint (>=4.0.3,<5.0.0)"
]
